tests/baselines/reference/emitArrowFunctionWhenUsingArguments01.errors.txt
emitArrowFunctionWhenUsingArguments01.ts(2,15): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
emitArrowFunctionWhenUsingArguments01.ts(7,19): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
emitArrowFunctionWhenUsingArguments01.ts(13,13): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
emitArrowFunctionWhenUsingArguments01.ts(19,15): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments01.ts (4 errors) ====
    var a = () => {
        var arg = arguments[0];  // error
                  ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
    }
    
    var b = function () {
        var a = () => {
            var arg = arguments[0];  // error
                      ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
        }
    }
    
    function baz() {
    	() => {
    		var arg = arguments[0];
    		          ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
    	}
    }
    
    function foo(inputFunc: () => void) { }
    foo(() => {
        var arg = arguments[0];  // error
                  ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
    });
    
    function bar() {
        var arg = arguments[0];  // no error
    }
    
    
    () => {
    	function foo() {
    		var arg = arguments[0];  // no error
    	}
    }